--- a/less/primo-header.less
+++ b/less/primo-header.less
@@ -140,6 +140,7 @@
 #exlidMainMenuTile{
   .make-lg-column(5);
   .make-lg-column-offset(3);
+  width: 100%;
   margin-bottom: 1em;
   div.EXLMainMenuContainer{
     float: none;
@@ -201,4 +202,5 @@
 
 #exlidHeaderTile{
   .make-lg-column(4);
+  width: 100%;
 }
